# WOMS

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .coverage 2  .coverage 3  .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_05_01_2226-fee9718390b8_add_users_table.py  2026_05_02_0635-848e0ae420d8_add_orders_and_audit_logs_tables.py  2026_05_02_1304-77fe0f239801_add_lock_fields_to_orders.py  2026_05_11_0900-a1b2c3d4e5f6_add_order_pin_fields.py  2026_05_12_0900-b2c3d4e5f6a7_add_order_daily_breakdown.py  2026_05_13_1000-c3d4e5f6a7b8_make_email_primary.py  2026_05_14_1603-3eb23c0bbcd4_add_notifications_table.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  errors.py
backend/app/api/v1/: __init__.py  auth.py  health.py  notifications.py  orders.py  schedule.py  system.py  users.py  websocket.py
backend/app/core/: __init__.py  config.py  db.py  logger.py  redis.py  scheduling_lock.py  security.py
backend/app/models/: __init__.py  audit_log.py  base_class.py  notification.py  order.py  user.py
backend/app/repositories/: __init__.py  audit_log.py  notification.py  order.py  user.py
backend/app/schemas/: __init__.py  notification.py  order.py  schedule.py  system.py  user.py
backend/app/services/: auth.py  notification.py  order.py  order_lock.py  schedule_queue.py  scheduling.py  system.py  user.py  websocket.py
backend/app/workers/: __init__.py  celery_app.py  scheduling.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_assignable_users.py  test_auth.py  test_health.py  test_notifications.py  test_order_filters_extended.py  test_order_lock.py  test_order_rbac.py  test_orders.py  test_schedule.py  test_system.py  test_users.py  test_websocket.py
backend/tests/services/: test_order.py  test_schedule_queue.py  test_scheduling.py  test_websocket.py
backend/tests/workers/: conftest.py  test_celery_app.py  test_scheduling_benchmark.py  test_scheduling_task.py
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDELINES.md  FRONTEND_SPEC.md  GITHUB_SETUP.md  HOW_TO_TEST.md  RULES.md  scheduling-integration.md  scheduling.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ThemeProvider.tsx
frontend/src/components/layout/: AppShell.tsx  Header.tsx  MobileNav.test.tsx  MobileNav.tsx  ProtectedRoute.tsx  Sidebar.tsx  ThemeToggle.tsx  mobileNavStore.ts
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  skeleton.tsx  table.tsx  textarea.tsx
frontend/src/features/auth/api/: auth.test.ts  auth.ts  login.ts  users.test.ts  users.ts
frontend/src/features/auth/components/: AuthPage.tsx  LoginForm.test.tsx  LoginForm.tsx  LoginPage.tsx  RegisterForm.test.tsx  RegisterForm.tsx
frontend/src/features/auth/stores/: authStore.ts
frontend/src/features/auth/types/: auth.ts
frontend/src/features/dashboard/api/: apiFetch.ts  dashboard.ts  useDashboardData.ts  useDashboardWs.test.ts  useDashboardWs.ts  useOrdersSnapshot.test.ts  useOrdersSnapshot.ts  usePendingOps.test.ts  usePendingOps.ts  useScheduleCapacity.test.ts  useScheduleCapacity.ts  useScheduleStatus.test.ts  useScheduleStatus.ts  useSystemHealth.test.ts  useSystemHealth.ts  useUsernames.test.ts  useUsernames.ts
frontend/src/features/dashboard/components/: ActivityFeed.tsx  CapacityChart.test.tsx  CapacityChart.tsx  DashboardPage.test.tsx  DashboardPage.tsx  LatencyChart.tsx  MetricCard.test.tsx  MetricCard.tsx  OrdersSnapshotCard.test.tsx  OrdersSnapshotCard.tsx  PendingOpsTable.test.tsx  PendingOpsTable.tsx  RequestRateChart.tsx  ScheduleControlBar.test.tsx  ScheduleControlBar.tsx  ScheduleStatusCard.test.tsx  ScheduleStatusCard.tsx  ServiceHealthGrid.test.tsx  ServiceHealthGrid.tsx  StatusCard.test.tsx  StatusCard.tsx  ViewerDashboard.test.tsx  (+1 more)
frontend/src/features/orders/: index.tsx
frontend/src/lib/: apiFetch.test.ts  apiFetch.ts  auth.ts  utils.ts
frontend/src/routes/: router.test.tsx  router.tsx
frontend/src/stores/: themeStore.ts
frontend/src/test/: setup.ts
(+21 files in other folders)
