[project]
name = "smart-order-backend"
version = "0.1.0"
description = "Smart Order Management System — backend (FastAPI + SQLAlchemy + Celery)"
requires-python = ">=3.11,<3.12"
readme = "../README.md"
license = { text = "Proprietary" }
authors = [{ name = "NYCU Cloud Final Team" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres]>=4.9.0",
    "pre-commit>=4.0.0",
    "fakeredis>=2.35.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff — single tool for lint + format (replaces black, isort, flake8).
# Per docs/RULES.md: enforce Google Python Style Guide via Ruff.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
# Selected rule sets: pycodestyle, pyflakes, isort, bugbear, security, naming, etc.
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "B",                # flake8-bugbear
    "C4",               # flake8-comprehensions
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "S",                # flake8-bandit (security)
    "SIM",              # flake8-simplify
    "RET",              # flake8-return
    "PL",               # pylint subset
    "RUF",              # Ruff-specific
    "D",                # pydocstyle
    "ANN",              # flake8-annotations
]
ignore = [
    "D100", "D104",      # Missing module/package docstring (we use README/comments)
    "D203", "D213",      # Conflicting docstring styles
    "PLR0913",           # Too many arguments — FastAPI handlers commonly need many
    "ANN401",            # Allow `Any` in **kwargs / pass-through helpers (audit_log, middleware)
    "B008",              # FastAPI Depends() in argument defaults is intentional
]

[tool.ruff.lint.per-file-ignores]
# Tests may use assert, skip docstrings, and lazy-import to defer env-var
# reads. ``PLW0108`` — ``lambda: factory()`` patterns are intentional in
# monkeypatch.setattr calls to defer construction; ``SIM117`` —
# nested ``with`` blocks read better than a single multi-context line in
# fixture-heavy setups.
"tests/**" = [
    "S101", "S105", "S106", "S107",
    "D", "ANN", "PLR2004", "PLC0415",
    "PLW0108", "SIM117", "E501",
]
# Alembic migrations are auto-generated — relax style rules.
"alembic/**" = ["D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy — strict type-checking (per docs/RULES.md).
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_configs = true
plugins = []

[[tool.mypy.overrides]]
# Third-party libs without bundled type stubs.
module = ["celery.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest — test discovery and asyncio defaults.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "integration: tests that require Docker / Testcontainers (slow)",
    "unit: pure unit tests, no I/O",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/main.py", "alembic/*"]
